<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/image_poster"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@color/blueGrey_300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_item_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toTopOf="@id/image_poster"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/tv_item_date"
        style="@style/ItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        app:layout_constraintBottom_toTopOf="@id/tv_item_rating"
        app:layout_constraintStart_toStartOf="@+id/tv_item_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
        app:drawableStartCompat="@drawable/ic_date" />


    <TextView
        android:id="@+id/tv_item_rating"
        style="@style/ItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:drawableStartCompat="@drawable/ic_rating"
        app:layout_constraintBottom_toBottomOf="@+id/image_poster"
        app:layout_constraintStart_toStartOf="@id/tv_item_date"
        tools:text="@string/rating" />

    <View
        android:id="@+id/ghost_view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        android:background="@color/blueGrey_300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_poster" />

    <TextView
        android:id="@+id/txv_item_overview"
        style="@style/ItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:gravity="start"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/overview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ghost_view" />

    <TextView
        android:id="@+id/tv_item_overview"
        style="@style/ItemText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txv_item_overview"
        tools:text="@string/overview" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>